# learning_italian_bot

./: .env  .gitignore  Dockerfile  README.md  alembic.ini  amvera.yaml  commands.txt  docker-compose.yaml  loader.py  main.py  pyproject.toml  requirements.txt
admin/: advanced_handlers.py  ai_handlers.py  handlers.py  kb.py  quiz_handlers.py  start_handlers.py  stats_handlers.py
api/: parser_vocabulary.py  vocabulary.json
config_data/: config.py
database/: db_helper.py  db_main.py  functions.py  italian_idioms.json  model.py
db_config/: db_config.py
filters/: filter.py
functions_for_handler/: admin_functions.py
inline_keyboard/: inline_kb_w_call_back.py
middleware/: middleware.py  user_middleware.py
migration/: env.py
migration/versions/: 169e64d478ca_add_user_progress_models.py  4d2ce756aa22_switch_to_func_now_timestamps.py  4fe1ddabd44e_create_new_table.py  82fe6a200b48_fix_datetime_timezone_fields.py  c7c179b8c8ce_fix_datetime_timezone_in_training_.py  cad3f4858c43_change_datetime_fields_to_timezone_aware.py  d07b29e62f58_create_tables.py  e75f48ff0d4f_switch_to_func_now_timestamps_all_models.py
model/: model.py
parsers/: parser_phrase.py
reply_keyboard/: __init__.py  rep_kb.py
schemas/: schemas.py
services/: admin_functions.py  conversation_service.py  exercise_service.py  openai_service.py  user_service.py
utils/: datetime_utils.py  set_commands.py  states.py
